# MiniRevm_Simulation

./: .rusty-hook.toml  README.md
rust_simulate_evm/: Cargo.toml
rust_simulate_evm/crates/libs/lib_core/: Cargo.toml
rust_simulate_evm/crates/libs/lib_core/src/: debug.rs  lib.rs
rust_simulate_evm/crates/libs/lib_utils/: Cargo.toml
rust_simulate_evm/crates/libs/lib_utils/src/: error.rs
rust_simulate_evm/crates/services/core_module/: Cargo.toml
rust_simulate_evm/crates/services/core_module/gas/: constant.rs
rust_simulate_evm/crates/services/core_module/interpreter/context/: Cargo.toml
rust_simulate_evm/crates/services/core_module/interpreter/context/src/: evm_context.rs  lib.rs
rust_simulate_evm/crates/services/core_module/interpreter/gas/: Cargo.toml
rust_simulate_evm/crates/services/core_module/interpreter/gas/src/: constant.rs  lib.rs
rust_simulate_evm/crates/services/core_module/interpreter/opcodes/: Cargo.toml
rust_simulate_evm/crates/services/core_module/interpreter/opcodes/src/: context.rs  enviroment.rs  jump_flow.rs  lib.rs  log.rs  mathematical.rs  memory.rs  storage.rs  system.rs
rust_simulate_evm/crates/services/core_module/interpreter/stack/: Cargo.toml
rust_simulate_evm/crates/services/core_module/interpreter/stack/src/: dup.rs  lib.rs  pop.rs  push.rs  swap.rs
rust_simulate_evm/crates/services/core_module/interpreter_execute/: Cargo.toml
rust_simulate_evm/crates/services/core_module/interpreter_execute/src/: enviroment.rs  execute.rs  lib.rs  log.rs  memory.rs  stack.rs  storage.rs
rust_simulate_evm/crates/services/core_module/src/: main.rs
rust_simulate_evm/src/: lib.rs  main.rs
rust_simulate_evm/src/evm_core/: execute.rs  log.rs  memory.rs  mod.rs  stack.rs  storage.rs
rust_simulate_evm/src/evm_core/context/: evm_context.rs  mod.rs
rust_simulate_evm/src/evm_core/gas/: constant.rs
rust_simulate_evm/src/evm_core/opcodes/: enviroment.rs  jump_flow.rs  log.rs  mathematical.rs  memory.rs  mod.rs  storage.rs  system.rs
rust_simulate_evm/src/evm_core/opcodes/stack/: dup.rs  mod.rs
rust_simulate_evm/src/evm_core/utils/: assembly.rs  byte_operate.rs  enviroment.rs  error.rs  mod.rs
