[package]
name = "rust_simulate_evm"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "An Ethereum Virtual Machine (EVM) simulator written in Rust that supports bytecode execution"
authors = ["JeffyItWeb3 <zhangxucan2018@163.com>"]
repository = "https://github.com/it-can-bee/MiniRevm_Simulation"
homepage = "https://github.com/it-can-bee"

[dependencies]
tokio = { version = "1", features = ["full"] }
colored = "2.0.4"
ethers = "2.0.7"
mem_storage = "0.1.1"
primitive-types = "0.12.1"
hex = "0.4"
rusty-hook = "0.11.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
alloy-primitives = "0.6.2"
alloy-rlp = "0.3.4"
revm-primitives = "2.0.0"
dotenv = "0.15.0"



#[workspace]
#members = [
#    "crates/libs/lib_core",  # 核心库 binary
#    "crates/libs/lib_utils",  # 工具库 binary
#    "crates/services", # 应用层 application
#]
